--- a/src/features/public/Donations/styles/Projects.module.scss
+++ b/src/features/public/Donations/styles/Projects.module.scss
@@ -8,7 +8,7 @@
   margin-top: 0px;
   height: 100vh;
   overflow: scroll;
-  padding-bottom: 76px;
+  padding-bottom: 60px;
 }
 
 .containerChild {
@@ -332,6 +332,10 @@
     display: grid;
     grid-template-columns: auto auto;
     column-gap: 16px;
+  }
+
+  .container {
+    padding-bottom: 0px;
   }
 }
 
